development-runs/379/k8s/prod/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: discovery-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: ralfx22/rrb-discovery-server
          ports:
            - containerPort: 8761
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: discovery-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: discovery-server
  ports:
    - name: http
      port: 8761
      targetPort: 8761
