development-runs/379/k8s/prod/notification-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: notification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: notification-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notification-api
    spec:
      containers:
        - name: notification-api
          image: ralfx22/rrb-notification-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-kafka
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: notification-api-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: notification-api-kafka
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notification-api-kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
              name: client
---
apiVersion: v1
kind: Service
metadata:
  name: notification-api-kafka
  namespace: rrb-app
  labels:
    app.kubernetes.io/name: notification-api-kafka
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notification-api-kafka
  ports:
    - name: client
      port: 9092
      targetPort: 9092
